// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectUsersAdd /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-38 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-13 {
  clear: both;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-14 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-15 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-18 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-19 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-40 button,
.emotion-40 a {
  margin-right: 16px;
}

.emotion-39 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-39:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-39,
.emotion-39:hover,
.emotion-39:visited {
  background-color: #73b61c;
}

.emotion-39:hover {
  background-color: #96c955;
}

.emotion-39[aria-disabled=true] {
  background-color: #808080;
}

<div>
    <h3
      className="emotion-0"
    >
      Add User(s) to Project
    </h3>
    <div
      className="emotion-6"
    >
      <label
        className="emotion-1"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-5"
      >
        <input
          className="emotion-2"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-4"
        >
          <button
            className="emotion-3"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-41"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-10"
      >
        <label
          className="emotion-7"
          htmlFor="emails"
        >
          Email(s)
        </label>
        <div
          className="emotion-9"
        >
          <input
            autoFocus={true}
            className="emotion-8"
            disabled={false}
            id="emails"
            name="emails"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-10"
        >
           
        </div>
      </div>
      <fieldset
        className="emotion-38"
      >
        <legend
          className="emotion-12"
        >
          Add Roles
        </legend>
        
        <div
          className="emotion-13"
        />
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-14"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="ML_Tools"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-15"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              ML Tools
            </span>
            <span
              className="emotion-19"
            >
              Provides access to the Job Queue, Data Sources, and Visualizer.
            </span>
          </div>
        </label>
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-14"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="API_Keys"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-15"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              API Keys
            </span>
            <span
              className="emotion-19"
            >
              Provides access to API Key provisioning.
            </span>
          </div>
        </label>
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-14"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="User_Admin"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-15"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              User Admin
            </span>
            <span
              className="emotion-19"
            >
              Provides access to User Administration for a Project.
            </span>
          </div>
        </label>
      </fieldset>
      <div
        className="emotion-40"
      >
        <button
          aria-disabled={true}
          className="emotion-39"
          onClick={[Function]}
          type="submit"
        >
          Add
        </button>
      </div>
    </form>
  </div>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 2`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-38 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-13 {
  clear: both;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-22 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-23 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-18 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-19 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-40 button,
.emotion-40 a {
  margin-right: 16px;
}

.emotion-39 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-39:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-39,
.emotion-39:hover,
.emotion-39:visited {
  background-color: #73b61c;
}

.emotion-39:hover {
  background-color: #96c955;
}

.emotion-39[aria-disabled=true] {
  background-color: #808080;
}

.emotion-14 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-15 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<div>
    <h3
      className="emotion-0"
    >
      Add User(s) to Project
    </h3>
    <div
      className="emotion-6"
    >
      <label
        className="emotion-1"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-5"
      >
        <input
          className="emotion-2"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-4"
        >
          <button
            className="emotion-3"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-41"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-10"
      >
        <label
          className="emotion-7"
          htmlFor="emails"
        >
          Email(s)
        </label>
        <div
          className="emotion-9"
        >
          <input
            autoFocus={true}
            className="emotion-8"
            disabled={false}
            id="emails"
            name="emails"
            onChange={[Function]}
            type="text"
            value="jane@email.com"
          />
        </div>
        <div
          className="emotion-10"
        >
           
        </div>
      </div>
      <fieldset
        className="emotion-38"
      >
        <legend
          className="emotion-12"
        >
          Add Roles
        </legend>
        
        <div
          className="emotion-13"
        />
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-14"
              defaultChecked={true}
              onClick={[Function]}
              type="checkbox"
              value="ML_Tools"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-15"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              ML Tools
            </span>
            <span
              className="emotion-19"
            >
              Provides access to the Job Queue, Data Sources, and Visualizer.
            </span>
          </div>
        </label>
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-22"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="API_Keys"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-23"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              API Keys
            </span>
            <span
              className="emotion-19"
            >
              Provides access to API Key provisioning.
            </span>
          </div>
        </label>
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-22"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="User_Admin"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-23"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              User Admin
            </span>
            <span
              className="emotion-19"
            >
              Provides access to User Administration for a Project.
            </span>
          </div>
        </label>
      </fieldset>
      <div
        className="emotion-40"
      >
        <button
          className="emotion-39"
          onClick={[Function]}
          type="submit"
        >
          Add
        </button>
      </div>
    </form>
  </div>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 3`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-3 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-10 {
  padding-top: 12px;
}

.emotion-5 {
  display: block;
  color: #808080;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-6 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited {
  color: #73b61c;
}

.emotion-7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-21 button,
.emotion-21 a {
  margin-right: 16px;
}

.emotion-20 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-20,
.emotion-20:hover,
.emotion-20:visited {
  background-color: #73b61c;
}

.emotion-20:hover {
  background-color: #96c955;
}

.emotion-20[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

.emotion-0 a {
  color: #4a90e2;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  padding-top: 12px;
  padding-bottom: 12px;
  color: #808080;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #d7f2de;
  border-radius: 2px;
  padding: 12px;
}

.emotion-15 {
  padding-top: 12px;
  color: #808080;
}

.emotion-18 {
  color: #b3b3b3;
}

.emotion-17 {
  font-weight: 700;
}

.emotion-19 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-19[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-19,
.emotion-19:hover,
.emotion-19:visited {
  background-color: #808080;
}

.emotion-19:hover {
  background-color: #b3b3b3;
}

.emotion-19[aria-disabled=true] {
  background-color: #808080;
}

<div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-1"
      >
        <svg
          color="#c92300"
          data-file-name="warning.svg"
          height={20}
        />
        <div
          className="emotion-0"
          role="alert"
        >
          Users not added.
        </div>
      </div>
    </div>
    <h3
      className="emotion-3"
    >
      Users that Need an Account
    </h3>
    <div
      className="emotion-4"
    >
      danny@zorroa.com
    </div>
    <div
      className="emotion-10"
    >
      <label
        className="emotion-5"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-9"
      >
        <input
          className="emotion-6"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-8"
        >
          <button
            className="emotion-7"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-12"
      >
        <svg
          color="#4ac565"
          data-file-name="checkmark.svg"
          height={20}
        />
        <div
          className="emotion-0"
          role="alert"
        >
          Users added.
        </div>
      </div>
    </div>
    <h3
      className="emotion-3"
    >
      Users Added
    </h3>
    <div
      className="emotion-15"
    >
      tester@fake.com
    </div>
    <h3
      className="emotion-3"
    >
      Roles
    </h3>
    <ul
      className="emotion-18"
    >
      <li
        className="emotion-17"
      >
        ML Tools
      </li>
    </ul>
    <div
      className="emotion-21"
    >
      <button
        className="emotion-19"
        onClick={[Function]}
        type="button"
      >
        Add Another User
      </button>
      <a
        className="emotion-20"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        View All
      </a>
    </div>
  </div>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 4`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-10 {
  padding-top: 8px;
}

.emotion-7 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-8 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-8:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-8:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-38 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-13 {
  clear: both;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-14 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-15 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-18 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-19 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-40 button,
.emotion-40 a {
  margin-right: 16px;
}

.emotion-39 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-39:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-39[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-39,
.emotion-39:hover,
.emotion-39:visited {
  background-color: #73b61c;
}

.emotion-39:hover {
  background-color: #96c955;
}

.emotion-39[aria-disabled=true] {
  background-color: #808080;
}

<div>
    <h3
      className="emotion-0"
    >
      Add User(s) to Project
    </h3>
    <div
      className="emotion-6"
    >
      <label
        className="emotion-1"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-5"
      >
        <input
          className="emotion-2"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-4"
        >
          <button
            className="emotion-3"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-41"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-10"
      >
        <label
          className="emotion-7"
          htmlFor="emails"
        >
          Email(s)
        </label>
        <div
          className="emotion-9"
        >
          <input
            autoFocus={true}
            className="emotion-8"
            disabled={false}
            id="emails"
            name="emails"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-10"
        >
           
        </div>
      </div>
      <fieldset
        className="emotion-38"
      >
        <legend
          className="emotion-12"
        >
          Add Roles
        </legend>
        
        <div
          className="emotion-13"
        />
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-14"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="ML_Tools"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-15"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              ML Tools
            </span>
            <span
              className="emotion-19"
            >
              Provides access to the Job Queue, Data Sources, and Visualizer.
            </span>
          </div>
        </label>
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-14"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="API_Keys"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-15"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              API Keys
            </span>
            <span
              className="emotion-19"
            >
              Provides access to API Key provisioning.
            </span>
          </div>
        </label>
        <label
          className="emotion-21"
        >
          <div
            className="emotion-17"
          >
            <input
              className="emotion-14"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="User_Admin"
            />
            <div
              className="emotion-16"
            >
              <svg
                className="emotion-15"
                data-file-name="checkmark.svg"
                height={20}
              />
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <span
              className="emotion-18"
            >
              User Admin
            </span>
            <span
              className="emotion-19"
            >
              Provides access to User Administration for a Project.
            </span>
          </div>
        </label>
      </fieldset>
      <div
        className="emotion-40"
      >
        <button
          aria-disabled={true}
          className="emotion-39"
          onClick={[Function]}
          type="submit"
        >
          Add
        </button>
      </div>
    </form>
  </div>,
]
`;
